<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paint Me A Picture</string>
    <string name="player1name">Enter Player 1\'s Name</string>
    <string name="player2name">Enter Player 2\'s Name</string>
    <string name="player1">Player 1\n Score</string>
    <string name="player2">Player 2\n Score</string>
    <string name="playButtonString">Let\'s Play!</string>
    <string name="logoPictureDesc">Game Logo Picture</string>
    <string name="teamLogo">Team Logo Picture</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    <string name="title_activity_guessing">GuessingActivity</string>
    <string name="hintPlaceholder">Please enter a hint.</string>
    <string name="guessPlaceholder">What is your guess?</string>
    <string name="submitButtonText">Guess!</string>
    <string name="hintString"></string>
    <string name="timerString">Time Remaining</string>
    <string name="categoryString">Category</string>
    <string name="nameDrawing">Please Name Drawing</string>
    <string name="submitDrawingText">Submit</string>
    <string name="lineProperties">Line Color/Width</string>
    <string name="title_activity_color_selected">ColorSelectedActivity</string>
    <string name="title_activity_color_select">ColorSelectActivity</string>
    <string name="sampleLineText">Line properties will be chosen here.</string>
    <string name="title_activity_hint_selection">HintSelectionActivity</string>
    <string name="doneButton">Done</string>
    <string name="drawingNamePlaceholder">Name of drawing</string>
    <string name="switchToGuessTitle">Pass the device to the other player!</string>
    <string name="ok">Okay!</string>
    <string name="correctGuess">You got it!</string>
    <string name="guessAgain">Nope! Guess again!</string>
    <string name="timeExpired">You ran out of time!</string>
    <string name="howToPlayTitle">How To Play</string>
    <string name="howToPlayText">Enter both players\' names and click "Let\'s Play".\n\n
   	    						 Player 1 draws a picture from the associated category.\n\n
   	    						 Player 1 enters the answer to the picture, then an associated hint.\n\n
   	    						 The device is then passed to Player 2.\n\n
   	    						 Player 2 has 130 seconds to guess.\n\n
   	    						 After 70 seconds, a hint will appear.\n\n
   	    						 Players swap turns.\n\n
   	    						 Score is calculated from how quickly the guess was correct.\n\n
   	    						 Enjoy!</string>

    <color name="red">#FF0000</color>
    <color name="blue">#0008FF</color>
    <color name="white">#FFFFFF</color>

    <string name="player1scoreString">1</string>
    <string name="player2scoreString">2</string>
    <string name="title_activity_correct_guess">CorrectGuessActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="playAgainString">Play Again!</string>
    <string name="lineWidth">Line Width</string>
    <string name="lineColor">Line Color</string>
    <string name="drawing">Draw</string>
    <string name="moving">Move</string>
    <string name="CategoryText">Category:</string>
    <string name="Category">BUILDING</string>
    <string name="p1Score">Player 1:</string>
    <string name="p2Score">Player 2:</string>
    <string name="p1ScoreInt">0</string>
    <string name="p2ScoreInt">0</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_manager">GameManagerActivity</string>
    <string name="roundText">Number of Rounds:</string>

</resources>