     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        tools:context=".MainActivity" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/player1name"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/logoPictureDesc"
            android:src="@drawable/main_label" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="onHowToPlay"
            android:text="@string/howToPlayTitle" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onStart"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/playButtonString" />

        <SeekBar
            android:id="@+id/roundSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_alignParentLeft="true"
            android:max="@integer/max"
            android:progress="@integer/progress1" />

        <TextView
            android:id="@+id/roundText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/roundSlider"
            android:layout_centerHorizontal="true"
            android:text="@string/roundText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/player1name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/player1name" />

        <EditText
            android:id="@+id/player2name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/player1name"
            android:ems="10"
            android:hint="@string/player2name" />

    </RelativeLayout>