<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:gravity="right"
    android:orientation="vertical"
    tools:context=".GuessingActivity" >

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/categoryString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/timerString"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/hintText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/hintString"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <edu.msu.project1.barrelofmonkeys.DrawingView
        android:id="@+id/drawingView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <EditText
            android:id="@+id/guessBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/guessPlaceholder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/blue"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/player1scoreString"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/red"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/player2scoreString"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="isCorrect"
            android:text="@string/submitButtonText" />

    </LinearLayout>

</LinearLayout>